--- a/src/index.html
+++ b/src/index.html
@@ -11,4 +11,7 @@
 <body style="background-color:#d9dde2">
   <app-root>Loading...</app-root>
 </body>
+<script src="assets/coba.js">
+
+</script>
 </html>
